--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,19 @@
 language: julia
 os:
-#  - osx
   - linux
 julia:
-  - 0.6
-#  - 0.7
-#  - nightly
+  - 0.7
+  - 1.0
+
+matrix:
+  fast_finish: true
+  allow_failures:
+    - julia: 1.0
+
 notifications:
   email: false
 addons:
     apt_packages:
         - gfortran
 after_success:
-  - julia -e 'cd(Pkg.dir("SVDD")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())';
+  - julia -e 'import Pkg; cd(Pkg.dir("SVDD")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())';
